k8s/hello-world/ingress/traefik/hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
spec:
  selector:
    app: hello-world-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
